import "ucar/nc2/grib/collection/gribCollection2.proto";

option java_package = "ucar.nc2.grib.collection";
option java_outer_classname = "PartitionCollectionProto";

///////////////////////////////////////////////////////////////////////////
message PartitionVariable {
  required uint32 groupno = 1;
  required uint32 varno = 2;
  required uint32 flag = 3;
  required uint32 partno = 4;

  // optionally keep stats
  optional float density = 7;
  optional uint32 ndups = 8;
  optional uint32 nrecords = 9;
  optional uint32 missing = 10;
}

extend Variable {
  repeated PartitionVariable partition = 100;
  repeated Parameter vparams = 101;    // not used yet
  repeated uint32 invCount = 102;      // for Coordinate TwoTimer, only 2D vars
  repeated uint32 time2runtime = 103;  // time index to runtime index, only 1D vars
}

message Gds {
  optional bytes gds = 1;             // all variables in the group use the same GDS
  optional sint32 gdsHash = 2 [default = 0];
  optional string nameOverride = 3;  // only when user overrides default name
}

message Parameter {
  required string name = 1;
  repeated double data = 2;
  optional string sdata = 3; // used for string data
}

extend Group {
  required uint32 gdsIndex = 100;       // index into GribCollection.gds array
  repeated uint32 run2part = 101;       // runtime index to partition index
  repeated Parameter gparams = 102;      // not used yet
}

message Dataset {
    enum Type {
      TwoD = 0;
      Best = 1;
      Analysis = 2;
    }

  required Type type = 1;
  repeated Group groups = 2;
}

message Partition {
  required string name = 1;       // name is used in TDS - eg the subdirectory when generated by TimePartitionCollections
  required string filename = 2;   // the gribCollection.ncx2 file
  required string directory = 3;   // top directory
  optional uint64 lastModified = 4;
}

extend GribCollection {
  repeated Gds gds = 100;               // all gds are stored here and shared among datasets
  repeated Dataset dataset = 101;
  repeated Partition partitions = 102;
  repeated Parameter pparams = 103;      // not used yet
}

//  cd c:/dev/github/thredds/grib/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/grib/collection/partitionCollection.proto